--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
   },
   "dependencies": {
     "chalk": "^4.1.2",
-    "dotenv": "^16.0.3"
+    "dotenv": "^16.0.3",
+    "ws": "^8.13.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/node": "^18.11.18",
+    "@types/ws": "^8.5.4",
+    "@types/uuid": "^9.0.1",
     "typescript": "^4.9.4",
     "ts-node": "^10.9.1",
     "nodemon": "^2.0.22"
