--- a/package.json
+++ b/package.json
@@ -14,13 +14,21 @@
     "dotenv": "^16.0.3",
     "ws": "^8.13.0",
     "uuid": "^9.0.0",
-    "socket.io": "^4.7.2"
+    "socket.io": "^4.7.2",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5"
   },
   "devDependencies": {
     "@types/node": "^18.11.18",
     "@types/ws": "^8.5.4",
     "@types/uuid": "^9.0.1",
     "@types/socket.io": "^3.0.2",
+    "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/body-parser": "^1.19.2",
+    "@types/cors": "^2.8.13",
     "typescript": "^4.9.4",
     "ts-node": "^10.9.1",
     "nodemon": "^2.0.22"
