--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "jsonwebtoken": "^9.0.2",
     "socket.io": "^4.7.2",
     "uuid": "^9.0.1",
+    "winston": "^3.17.0",
+    "winston-daily-rotate-file": "^4.7.1",
     "ws": "^8.13.0",
     "xterm": "^5.3.0",
     "xterm-addon-fit": "^0.8.0",
