--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/server.js",
   "scripts": {
     "build": "tsc --build --verbose ",
-    "start": "npm run build && node dist/server.js",
+    "start": "tsc && node dist/server.js",
     "dev": "ts-node src/server.ts",
     "watch": "npx nodemon --watch src --ext ts --exec ts-node src/server.ts"
   },
