--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "ws": "^8.13.0",
     "xterm": "^5.3.0",
     "xterm-addon-fit": "^0.8.0",
-    "xterm-addon-web-links": "^0.9.0"
+    "xterm-addon-web-links": "^0.9.0",
+    "yargs": "^17.7.2",
+    "yargs-parser": "^21.1.1"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.2",
@@ -36,6 +38,7 @@
     "@types/socket.io": "^3.0.2",
     "@types/uuid": "^9.0.1",
     "@types/ws": "^8.5.4",
+    "@types/yargs": "^17.0.33",
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
