--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "tsc --build --verbose ",
     "start": "tsc && node dist/server.js",
     "dev": "ts-node src/server.ts",
-    "watch": "npx nodemon --watch src --ext ts --exec ts-node src/server.ts"
+    "watch": "npx nodemon --watch src --ext ts --exec ts-node src/server.ts",
+    "validate": "ts-node src/utils/validateFiles.ts"
   },
   "dependencies": {
     "body-parser": "^1.20.2",
