--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
   "scripts": {
     "build": "tsc --build --verbose --sourceMap",
     "start": "tsc --sourceMap && node --enable-source-maps dist/server.js",
-    "dev": "ts-node --source-map src/server.ts",
-    "watch": "npx nodemon --watch src --ext ts --exec ts-node --source-map src/server.ts",
-    "validate": "ts-node src/utils/validateFiles.ts"
+    "dev": "ts-node-dev --transpile-only --respawn src/server.ts",
+    "watch": "ts-node-dev --transpile-only --respawn --watch src src/server.ts -- -a",
+    "validate": "ts-node-dev --transpile-only src/utils/validateFiles.ts"
   },
   "dependencies": {
+    "ajv": "^8.17.1",
     "body-parser": "^1.20.2",
     "chalk": "^4.1.2",
     "cors": "^2.8.5",
@@ -36,12 +37,10 @@
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^18.11.18",
-    "@types/socket.io": "^3.0.2",
     "@types/uuid": "^9.0.1",
     "@types/ws": "^8.5.4",
     "@types/yargs": "^17.0.33",
-    "nodemon": "^2.0.22",
-    "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.4"
   }
 }
