--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
   "scripts": {
     "build": "tsc --build --verbose --sourceMap",
     "start": "tsc --sourceMap && node --enable-source-maps dist/server.js",
+    "start:admin": "tsc --sourceMap && node --enable-source-maps dist/server.js -a",
+    "start:user": "tsc --sourceMap && node --enable-source-maps dist/server.js -u",
     "dev": "ts-node-dev --transpile-only --respawn src/server.ts",
-    "watch": "ts-node-dev --transpile-only --respawn --watch src src/server.ts -- -a",
+    "watch": "ts-node-dev --transpile-only --respawn --watch src src/server.ts",
+    "watch:admin": "ts-node-dev --transpile-only --respawn --watch src src/server.ts -- -a",
+    "watch:user": "ts-node-dev --transpile-only --respawn --watch src src/server.ts -- -u",
     "validate": "ts-node-dev --transpile-only src/utils/validateFiles.ts"
   },
   "dependencies": {
