--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -40,6 +40,7 @@
         "files.autoSaveDelay": 1000,
         "files.trimTrailingWhitespace": true,
         "files.insertFinalNewline": true,
+        "terminal.integrated.defaultProfile.linux": "zsh",
         "terminal.integrated.shell.linux": "zsh"
       }
     }
