Add force flag to create admin user with default password
Add a new `--force` command line option to create the admin user with a default password if not created on startup.

* **CLI Configuration**:
  - Add `--force` option in `src/config/cliConfig.ts`.
  - Update `CLIConfig` interface to include `force` property.
  - Parse `--force` flag from command line arguments and store it in the `CLIConfig` object.

* **Admin User Setup**:
  - Modify `checkAndCreateAdminUser` method in `src/setup/adminSetup.ts` to check for the `force` flag.
  - Create the admin user with a default password if the `force` flag is set.

* **Configuration**:
  - Import `cliConfig` object from `src/config/cliConfig.ts` in `src/config.ts`.
  - Add a new `FORCE` property to the exported configuration object.

* **Package Scripts**:
  - Update `start:admin` and `watch:admin` scripts in `package.json` to include the `-f` flag.

* **App Initialization**:
  - Update `src/app.ts` to use `AdminSetup` for handling admin creation with force flag support.

---

For more details, open the [Copilot Workspace session](https://copilot-workspace.githubnext.com/ellyseum/LEmud?shareId=XXXX-XXXX-XXXX-XXXX).

--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
   "scripts": {
     "build": "tsc --build --verbose",
     "start": "tsc --sourceMap && node --enable-source-maps dist/server.js",
-    "start:admin": "tsc --sourceMap && node --enable-source-maps dist/server.js -a",
+    "start:admin": "tsc --sourceMap && node --enable-source-maps dist/server.js -af",
     "start:user": "tsc --sourceMap && node --enable-source-maps dist/server.js -u",
     "dev": "ts-node-dev --transpile-only --respawn src/server.ts",
     "watch": "ts-node-dev --transpile-only --respawn --watch src src/server.ts",
-    "watch:admin": "ts-node-dev --transpile-only --respawn --watch src src/server.ts -- -a",
+    "watch:admin": "ts-node-dev --transpile-only --respawn --watch src src/server.ts -- -af",
     "watch:user": "ts-node-dev --transpile-only --respawn --watch src src/server.ts -- -u",
     "validate": "ts-node-dev --transpile-only src/utils/validateFiles.ts"
   },
