AdminSetup duplicate logic
Fixes #7

Consolidate MUD configuration logic into a single module.

* **adminApi.ts**
  - Remove `loadMUDConfig` and `saveMUDConfig` functions.
  - Export `loadMUDConfig` and `saveMUDConfig` functions.
* **admin-api.js**
  - Remove `loadMUDConfig` and `saveMUDConfig` functions.
  - Import `loadMUDConfig` and `saveMUDConfig` functions from `adminApi.ts`.
  - Use imported `loadMUDConfig` and `saveMUDConfig` functions.

---

For more details, open the [Copilot Workspace session](https://copilot-workspace.githubnext.com/ellyseum/LEmud/issues/7?shareId=XXXX-XXXX-XXXX-XXXX).

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,7 @@
 {
   "tasks": {
-    "build": "npm install && npm run build"
+    "build": "npm install && npm run build",
+    "test": "ls test"
   },
   "postCreateCommand": "npm install",
   "customizations": {
