change-pass state checkpoint

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "dist/server.js",
   "scripts": {
     "build": "tsc --build --verbose",
-    "start": "tsc --sourceMap && node --enable-source-maps dist/server.js",
+    "start": "npm run start:normal",
+    "start:normal": "tsc --sourceMap && node --enable-source-maps dist/server.js",
     "start:admin": "tsc --sourceMap && node --enable-source-maps dist/server.js -af",
     "start:user": "tsc --sourceMap && node --enable-source-maps dist/server.js -u",
     "dev": "ts-node-dev --transpile-only --respawn src/server.ts",
